--- a/src/index.sass
+++ b/src/index.sass
@@ -3,6 +3,7 @@
 @import url("../src/components/Filters/filters.sass")
 @import url("../src/components/WorkTools/tools.sass")
 @import url("../src/components/Aside/aside.sass")
+@import url("../src/components/TableData/table-data.sass")
 
 *
   margin: 0
@@ -38,9 +39,39 @@ textarea:focus::-webkit-input-placeholder
   visibility: visible
 
 .clear
-  width: 12px
-  height: 12px
+  width: 15px
+  height: 15px
   cursor: pointer
   background-image: url("./assets/images/close.svg")
   &:hover
     transform: rotate(90deg)
+
+.close
+  position: absolute
+  content: ""
+  right: 10px
+  top: 10px
+  width: 15px
+  height: 15px
+  cursor: pointer
+  background-image: url("./assets/images/close.svg")
+  &:hover
+    transform: rotate(90deg)
+
+.aside-table-wrapper
+  display: flex
+
+html, textarea
+  &::-webkit-scrollbar
+    width: 5px
+    background-color: #ffffff
+  &::-webkit-scrollbar-thumb
+    border-radius: 10px
+    background-color: #0457c2
+  &::-webkit-scrollbar-track
+    cursor: pointer
+    background-color: #ffffff
+
+textarea
+  padding: 5px
+  transition: none
